iniciação da responsividade

--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,7 @@ body {
 }
 
 .cabecalho, h1 {
-    font-family: caecilians;
+    font-family: frankest;
 }
 
 .logofuturando {
@@ -126,4 +126,54 @@ footer {
     background-color: red;
     width: 20%;
     height: 20%;
+}
+
+@media (max-width: 760px){
+
+    .cabecalho{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+    }
+
+    .vinteeduascartas{
+        margin: 0;
+        margin-left: 30px;
+        width: 80%;
+    }
+
+    .beneficios--box{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .buttonEbook {
+        text-align: center;
+        width: 100%;
+        background: url(../images/fundobutton.png);
+        border-radius: 50px;
+    }
+
+    .img-and-text{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .img--box img{
+        width: 80%;
+        margin-left: 30px;
+    }
+
+    .textandtext{
+        width: 100%;
+        text-align: justify;
+    }
+    
+
+    
 }
